Fix gap filtres, Fix glass-button, Refactoring

--- a/css/style.css
+++ b/css/style.css
@@ -134,7 +134,7 @@ form {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    gap: 24px;
+    /* gap: 24px; */
     width: 377px;
     height: 49px;
     overflow: hidden;
@@ -153,17 +153,21 @@ form .search-icon {
     justify-content: center;
 }
 
-form input,
-input::placeholder {
+form #barre-recherche {
     border: none;
-    padding: 0;
-    width: 147px;
-    height: 21px;
-    outline: none;
+    padding: 0px 24px;
+    width: 100%;
+    height: 100%;
     color: black;
     font-size: 18px;
     font-weight: 700;
     box-sizing: border-box;
+}
+
+form #barre-recherche::placeholder {
+    color: black;
+    font-size: 18px;
+    font-weight: 700;
     background-color: var(--white-color);
 }
 
@@ -182,7 +186,8 @@ form .txt-button {
     font-weight: 700;
 }
 
-form .txt-button:hover {
+form .txt-button:hover,
+.glass-button:hover {
     cursor: pointer;
 }
 
@@ -199,12 +204,12 @@ form .glass-button {
 }
 
 
- 
+
  /* Barre de filtres */
 
 
- .filter-bar,
- .choice {
+.filter-bar,
+.choice {
     display: flex;
     justify-content: flex-start;
     gap: 15px;
@@ -591,7 +596,6 @@ footer {
     main .info-group {
         padding: 0 20px;
         gap: 35px;
-        /* align-items: center; */
     }
 
     .titles {
@@ -615,7 +619,6 @@ footer {
         display: flex;
         width: 100%;
         border-radius: 20px;
-        overflow: visible;
     }
 
     form .txt-button {
@@ -630,20 +633,16 @@ footer {
         border: solid 1px var(--main-color);
         box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
         border-radius: 15px;
+        position: absolute;
+        right: 20px;
+        padding: 0;
         width: 49px;
         height: 49px;
-    }
-
-    form .glass-button i {
         color: var(--white-color);
     }
 
-    .glass-button:hover {
-        cursor: pointer;
-    }
 
 
-    
 
     /* Barre de filtres */
 
@@ -657,7 +656,8 @@ footer {
         grid-template-rows: 1fr 1fr;
         width: 100%;
         height: 125px;
-        gap: 10px;
+        /* Gap 20 = row-gap / Gap 10 = column-gap */
+        gap: 20px 10px;
     }
 
     .filter-bar .choice p {
